karnc/tests/fixtures/positive/72_context_uses_multiple_commons/src/commerce/identifiers.karn
commons commerce.identifiers

type OrderId    = String where Matches("ORD-[0-9]+")
type CustomerId = String where Matches("CUST-[0-9]+")
