karnc/tests/fixtures/negative/109_mock_needs_pin/src/demo/codes.karn
commons demo.codes

type Code = String where Matches("[a-z]+")
